ПРОСМОТР БД: Для OZON и Avito сделано Нужно сделать алгоритм для "Лучшей цены" и по "Совпадениям". Необходимо добавить просмотр по датам. Стоит определить динамику цен

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,11 @@
         <item>OZON</item>
         <item>Avito</item>
     </string-array>
+
+    <string-array name="Tables">
+        <item>OZON</item>
+        <item>Avito</item>
+        <item>Лучшая цена</item>
+        <item>Совпадения</item>
+    </string-array>
 </resources>
